# KSReals

./: .agda-lib  .gitignore  AcornConfig.cmake  AgdaMain.agda  AppRationals.agda  CMakeLists.txt  Cast.agda  Cheat.agda  Complete.agda  Config.cmake.in  Continuity.agda  Decidable.agda  Dyadic.agda  DyadicReal.agda  Field.agda  Int.agda  Interval.agda  KSReals.agda  Main.agda  Makefile  MetricSpace.agda  Nat.agda  Operations.agda  Order.agda  PropositionalEquality.agda  README.md  Rational.agda  Reals.agda  Relations.agda  Ring.agda  Setoid.agda  Setup.hs  acorn.agda-lib  acorn.cabal  main.c
Algebra/: Field.agda  MetricSpace.agda  Order.agda  Ring.agda  SemiRing.agda  Setoid.agda
Function/: Exp.agda  SquareRoot.agda  Trigonometric.agda
Functions/: AlternatingSeries.agda  Exp.agda  SquareRoot.agda  Trigonometric.agda
HaskellInstance/: Floating.agda  Fractional.agda  Num.agda  Number.agda
HaskellInstances/: Floating.hs  Fractional.agda  Num.agda  Number.agda
Implementation/: Dyadic.agda  DyadicReal.agda  Frac.agda  Int.agda
Implementations/: Decimal.agda  Dyadic.agda  DyadicReal.agda  Int.agda  Nat.agda  Rational.agda
Operations/: Abs.agda  Cast.agda  Decidable.agda  Pow.agda  ShiftL.agda
Operator/: Decidable.agda
RealTheory/: AppRational.agda  AppRationals.agda  Completion.agda  Continuity.agda  Interval.agda  MetricSpace.agda  Real.agda  Reals.agda
RealTheory/Instances/: Pow.agda
Shell/: CalcState.agda  Exp.agda  Interaction.agda  Parser.agda  Statement.agda  Value.agda
Test/: Exp.agda
Tool/: PropositionalEquality.agda  Relation.agda  Relations.agda  Show.agda  Stream.agda
Tools/: Cheat.agda  ErasureProduct.agda  PropositionalEquality.agda  Relations.agda  Show.agda  Stream.agda
docs/: packages.puml  simplified_structure.puml  structure.puml
include/: Acorn.h  TinyHsFFI.h
src/: .gitignore  All.agda  Main.agda  Main.hs  TestMain.hs  acornInterruptEvaluation.c
src/Function/: AlternatingSeries.agda  Exp.agda  Trigonometric.agda
src/HaskellInstance/: Eq.agda  Show.agda
src/Implementation/: Int.agda
src/RealTheory/: AppRational.agda
src/Shell/: CalcState.agda  Evaluation.agda  Exp.agda  Interaction.agda  Parser.agda  Platform.hs
src/Shell/Platform/: Posix.agda  Win32.agda
src/Test/: Parser.agda
src/Test/Haskell/: Parser.agda
src/Tool/: ErasureProduct.agda  Stream.agda
