cabal-version:       2.2
name:                acorn
version:             0.1
synopsis:            A calculator and library with provably correct Agda reals.
description:
  An agda2hs-compatible implementation of Krebbers–Spitters reals, focusing on usability.

source-repository head
  type:     git
  location: https://github.com/viktorcsimma/acorn.git

library
  -- it only searches online and not among local packages;
  -- which is ugly because I use the version on my own machine
  -- so I'll just comment this out for now
  -- build-depends:       agda2hs >= 1.3 && < 2.0
  build-depends:       base     >= 4.13    && < 4.20,
                       containers,
                       text
  hs-source-dirs:      hs
  exposed-modules:     Operator.Abs,
                       Operator.Pow,
                       Operator.ExactShift,
                       Operator.Cast,
                       Operator.ShiftL,
                       Operator.Decidable,
                       Operator.Shift,
                       Tool.ErasureProduct,
                       Tool.Stream,
                       HaskellInstance.Show,
                       Algebra.SemiRing,
                       Algebra.Setoid,
                       Algebra.Ring,
                       Algebra.Order,
                       Algebra.Field,
                       RealTheory.Completion,
                       RealTheory.Instance.Pow,
                       RealTheory.Instance.Cast,
                       RealTheory.AppRational,
                       RealTheory.MetricSpace,
                       RealTheory.Real,
                       RealTheory.Continuity,
                       Shell.Exp,
                       Shell.Statement,
                       Shell.CalcState,
                       Shell.Parser,
                       Shell.Value,
                       Shell.Interaction,
                       Implementation.Frac,
                       Implementation.Decimal,
                       Implementation.Rational,
                       Implementation.Int,
                       Implementation.Nat,
                       Implementation.Dyadic,
                       Function.AlternatingSeries,
                       Function.Exp,
                       Function.SquareRoot,
                       Function.Trigonometric,
                       Main
  default-language:    GHC2021


executable AcornShell
  hs-source-dirs:      hs
  main-is:             Main.hs
  -- it only searches online and not among local packages;
  -- which is ugly because I use the version on my own machine
  -- so I'll just comment this out for now
  -- build-depends:       agda2hs >= 1.3 && < 2.0,
  build-depends:       base     >= 4.13    && < 4.20,
                       containers,
                       text,
                       acorn
  default-language:    GHC2021